fixed the problem, had to do with applying z-index to the ultimate parent on top, which is not nested

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -129,11 +129,6 @@ div.tooltip-inner {
 	z-index: 500;
 }
 
-.turn-sound {
-	position: relative;
-	z-index: 500;
-}
-
 .title {
 	height: 400px;
 	width: 800px;
@@ -342,7 +337,7 @@ body {
 	letter-spacing: 10px;
 	font-size: 40px;
 	color: #5e5e5e;
-	z-index: 500;
+	// z-index: 500;
 }
 
  .navbar-default { height: 28px;
@@ -441,18 +436,6 @@ html, body {
 	height: 100px;
 }
 
-.sticker-container {
-	position: absolute;
-	top: 200px;
-	right: 1200px;
-	z-index: 1;
-}
-
-.cloud1 {
-	position: relative;
-	z-index: 500;
-}
-
 .caption {
 	.small-caption {
 		font-size: .9em;
@@ -480,9 +463,7 @@ html, body {
 	float: right;
 }
 
-.modal-content {
-	position: fixed !important;
-	position: relative !important;
+.modal {
 	z-index: 100px !important;
 	-webkit-transform: translateZ(50px);
 }
